--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css ">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://github.com/kimnikitaschijf/look-and-feel-styleguide/biebinbloei.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The client website</title>
 </head>
 
 <body>
+
 
     <header style="top: 0px;">
       <nav id="headermenu">
@@ -54,7 +55,7 @@
             <p>In de Zadenbieb kun je zaden ruilen voor je eigen moestuin, tuin of balkon. We zorgen ervoor dat er altijd genoeg keuze is dankzij onze samenwerking met groene buurtpartners in Amsterdam Oost. Zo blijft er een ruime variatie aan zaden beschikbaar, zodat iedereen iets kan vinden om te planten en te laten groeien.</p>
         </div>
     </section>
-      <footer>
+      <footer class="color1">
         <div>
           <p>footer</p>
         </div>
