--- a/index.html
+++ b/index.html
@@ -1,95 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css ">
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The client website</title>
+  <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css ">
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The client website</title>
 </head>
 
 <body>
 
 
-    <header style="top: 0px;">
-      <nav id="headermenu">
-        <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-        <a href="#"><img class="harry" src="assets/harry_blij.gif"/></a>
-        <ul class="nav-links" id="nav-links">
-            <li><a href="#" class="a-link">Thema</a></li>
-            <li><a href="#" class="a-link">De Geveltuin</a></li>
-            <li><a href="#" class="a-link">Stekjes & Zaadjes</a></li>
-            <li><a href="#" class="a-link">Partners </a></li>
-            <li><a href="#" class="a-link">Contact</a></li>
-        </ul>
+  <header style="top: 0px;">
+    <nav id="headermenu">
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <a href="#"><img class="harry" src="assets/harry_blij.gif" /></a>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#" class="a-link">Thema</a></li>
+        <li><a href="#" class="a-link">De Geveltuin</a></li>
+        <li><a href="#" class="a-link">Stekjes & Zaadjes</a></li>
+        <li><a href="Partners.html" class="a-link">Partners </a></li>
+        <li><a href="#" class="a-link">Contact</a></li>
+      </ul>
     </nav>
-      </header>
+  </header>
 
-      <main>
-      <section class="title">
+  <main>
+    <section class="title">
+      <div>
         <div>
-          <div>
-            <h1>Bieb In Bloei</h1>
+          <h1>Bieb In Bloei</h1>
           <h2 class="sub-title">Inspireer & Deel Groene Passie!</h2>
           <a href="#pagedown"><img class="arrow" src="assets/arrow down.gif"></a>
-          </div>
         </div>
-      </section>
-      <section id="pagedown" class="project">
-        <div class="content">
-            <h2>Ons Tweede Bieb in Bloei Project</h2><br>
-            <p>De geveltuin aan de voorkant van OBA Linnaeus; twee jaar geleden aangevraagd door de inmiddels afgestudeerde Bestuurskunde student Mert. Dit project begon als een simpel idee, maar is sindsdien uitgegroeid tot een vaste traditie in de buurt. De geveltuin is een groen en levendig stukje natuur geworden in de stad. Mensen lopen erlangs en zien de planten en bloemen bloeien, wat een frisse uitstraling geeft aan de bibliotheek.</p>
-            <p>Sindsdien organiseren onze vaste studenten elk jaar in maart een Zaaifeest, om het begin van de lente te vieren met de buurt. Het Zaaifeest is niet alleen een gelegenheid om nieuwe zaden te planten, maar ook een moment om elkaar te ontmoeten. Buurtbewoners, jong en oud, komen samen om de lente in te luiden.</p>
-            <p>Daarna start het Bakkie buiten de Bieb seizoen, waarin studenten elke maandagmiddag tussen 15.00 en 16.30 met buurtbewoners in de geveltuin werken onder het genot van een hapje en drankje.</p>
-        </div>
+      </div>
+    </section>
+    <section id="pagedown" class="project">
+      <div class="content">
+        <h2>Ons Tweede Bieb in Bloei Project</h2><br>
+        <p>De geveltuin aan de voorkant van OBA Linnaeus; twee jaar geleden aangevraagd door de inmiddels afgestudeerde
+          Bestuurskunde student Mert. Dit project begon als een simpel idee, maar is sindsdien uitgegroeid tot een vaste
+          traditie in de buurt. De geveltuin is een groen en levendig stukje natuur geworden in de stad. Mensen lopen
+          erlangs en zien de planten en bloemen bloeien, wat een frisse uitstraling geeft aan de bibliotheek.</p>
+        <p>Sindsdien organiseren onze vaste studenten elk jaar in maart een Zaaifeest, om het begin van de lente te
+          vieren met de buurt. Het Zaaifeest is niet alleen een gelegenheid om nieuwe zaden te planten, maar ook een
+          moment om elkaar te ontmoeten. Buurtbewoners, jong en oud, komen samen om de lente in te luiden.</p>
+        <p>Daarna start het Bakkie buiten de Bieb seizoen, waarin studenten elke maandagmiddag tussen 15.00 en 16.30 met
+          buurtbewoners in de geveltuin werken onder het genot van een hapje en drankje.</p>
+      </div>
     </section>
 
     <section class="project">
-        <div class="content">
-            <h2>Ons Derde Bieb in Bloei Project</h2><br>
-            <p>Ons derde Bieb in Bloei-project is de Zadenbieb, een bijzonder initiatief dat aan het eind van 2024 wordt opgezet door kinderen uit de buurt bij de Maakplaats in OBA Javaplein. Samen zullen zij de Zadenbieb vormgeven, een plek vol creativiteit en buurtgevoel. In maart 2025 vieren we het begin van het nieuwe groeiseizoen met een feestelijk Zaaifeest, waarbij we samen de officiële opening van de Zadenbieb zullen beleven.</p>
-            <p>In de Zadenbieb kun je zaden ruilen voor je eigen moestuin, tuin of balkon. We zorgen ervoor dat er altijd genoeg keuze is dankzij onze samenwerking met groene buurtpartners in Amsterdam Oost. Zo blijft er een ruime variatie aan zaden beschikbaar, zodat iedereen iets kan vinden om te planten en te laten groeien.</p>
-        </div>
+      <div class="content">
+        <h2>Ons Derde Bieb in Bloei Project</h2><br>
+        <p>Ons derde Bieb in Bloei-project is de Zadenbieb, een bijzonder initiatief dat aan het eind van 2024 wordt
+          opgezet door kinderen uit de buurt bij de Maakplaats in OBA Javaplein. Samen zullen zij de Zadenbieb
+          vormgeven, een plek vol creativiteit en buurtgevoel. In maart 2025 vieren we het begin van het nieuwe
+          groeiseizoen met een feestelijk Zaaifeest, waarbij we samen de officiële opening van de Zadenbieb zullen
+          beleven.</p>
+        <p>In de Zadenbieb kun je zaden ruilen voor je eigen moestuin, tuin of balkon. We zorgen ervoor dat er altijd
+          genoeg keuze is dankzij onze samenwerking met groene buurtpartners in Amsterdam Oost. Zo blijft er een ruime
+          variatie aan zaden beschikbaar, zodat iedereen iets kan vinden om te planten en te laten groeien.</p>
+      </div>
     </section>
-      <footer class="color1">
-        <div>
-          <p>footer</p>
-        </div>
-      </footer>
+    <footer class="color1">
+      <div>
+        <p>footer</p>
+      </div>
+    </footer>
 </body>
 
 <script>
   const menuToggle = document.getElementById('mobile-menu');
-const navLinks = document.getElementById('nav-links');
+  const navLinks = document.getElementById('nav-links');
 
-menuToggle.addEventListener('click', () => {
+  menuToggle.addEventListener('click', () => {
     navLinks.classList.toggle('active'); // Toggle the "active" class
-});
+  });
 
-let lastScrollTop = 0;
-const header = document.getElementById("headermenu");
+  let lastScrollTop = 0;
+  const header = document.getElementById("headermenu");
 
-window.addEventListener("scroll", function () {
-  let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+  window.addEventListener("scroll", function () {
+    let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
 
-  if (scrollTop > lastScrollTop) {
-    // Naar beneden scrollen
-    header.style.top = "-120px"; // Verberg de header (aanpassen aan de hoogte van je header)
-  } else {
-    // Naar boven scrollen
-    header.style.top = "0"; // Zet de header weer terug naar boven
-  }
+    if (scrollTop > lastScrollTop) {
+      // Naar beneden scrollen
+      header.style.top = "-120px"; // Verberg de header (aanpassen aan de hoogte van je header)
+    } else {
+      // Naar boven scrollen
+      header.style.top = "0"; // Zet de header weer terug naar boven
+    }
 
-  lastScrollTop = scrollTop;
-});
+    lastScrollTop = scrollTop;
+  });
 
 
-    
+
 </script>
 
 </main>
+
 </html>
