--- a/Partners.html
+++ b/Partners.html
@@ -2,32 +2,76 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css">
-    <link rel="stylesheet" href="partners.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The client website</title>
+  <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css">
+  <link rel="stylesheet" href="partners.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The client website</title>
 </head>
 
 <body>
+  <header>
+    <nav id="headermenu"> <!--navigation menu-->
+      <div class="menu-toggle color4">
+        <img class='menu-icon' id="mobile-menu" src="assets/open-menu.svg">
+        <a href="#"><img height="50px" src="assets/logo.svg"></a>
+      </div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#" class="a-link">Thema</a></li>
+        <li><a href="#" class="a-link">De Geveltuin</a></li>
+        <li><a href="#" class="a-link">Stekjes & Zaadjes</a></li>
+        <li><a href="Partners.html" class="a-link">Partners </a></li>
+        <li><a href="#" class="a-link">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <header style="top: 0px;">
-        <nav id="headermenu">
-          <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+  <section class="partners-section">
+    <div class="outer-container">
+      <div class="background-div"></div>
+      <div class="front-div">
+        <h1 class="partners">Partners</h1><br>
+        <p>Bij Bieb & Bloei geloven we in de kracht van samenwerking om onze groene initiatieven tot leven te brengen.
+          Samen met onze gewaardeerde partners:</p>
+      </div>
+    </div>
+
+    <div class="outer-container">
+      <div class="background-div"></div>
+      <div class="front-div">
+        <div class="slideshow-container"><!--slideshow ADDED-->
+          <div class="slide" id="slide1">
+            <h1>Oba</h1>
+            <h5>Samenwerking OBA </h5>
+            <p>Bieb & Bloei is een initiatief van de Openbare Bibliotheek Amsterdam (OBA).
+              In de projecten van Buurtcampus Oost benutten we de kennis en creativiteit van de studenten en de locaties
+              en publieksprogramma’s van de bibliotheek.</p>
           </div>
-          <a href="#"><img class="harry" src="assets/harry_blij.gif" /></a>
-          <ul class="nav-links" id="nav-links">
-            <li><a href="#" class="a-link">Thema</a></li>
-            <li><a href="#" class="a-link">De Geveltuin</a></li>
-            <li><a href="#" class="a-link">Stekjes & Zaadjes</a></li>
-            <li><a href="Partners.html" class="a-link">Partners </a></li>
-            <li><a href="#" class="a-link">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+          <div class="slide" id="slide2">
+            <h1>Hva</h1>
+            <h5>Samenwerking HvA</h5>
+            <p>Samenwerking HvA
+              Bieb & Bloei is een initiatief van de Hogeschool van Amsterdam (HvA). In de projecten van Hva benutten we
+              de kennis en creativiteit van de studenten en de locaties en publieksprogramma’s van de bibliotheek.</p>
+          </div>
+          <div class="slide" id="slide3">
+            <h1>Tugla85</h1>
+            <h5>Samenwerking Tugla85</h5>
+            <p>Bieb & Bloei werkt samen met Tugla85. In de projecten van Tugla85 benutten we de kennis en creativiteit.
+              Zij helpen ons met het organiseren an workshops voor studenten.</p>
+          </div>
+        </div>
+        <div class="dots-container"><!--slideshow ADDED-->
+          <span class="dot active" data-index="0"></span>
+          <span class="dot" data-index="1"></span>
+          <span class="dot" data-index="2"></span>
+        </div>
+        <button class="arrow" id="nextBtn">Next</button>
+      </div>
+    </div>
+  </section>
+
+  <script src="scripts.js"></script>
 
 </body>
 
