update mobile version (partners+ home page)
+css style.css
+html index.html

Phone compatibility on both pages

--- a/Partners.html
+++ b/Partners.html
@@ -14,10 +14,10 @@
     <nav id="headermenu"> <!--navigation menu-->
       <div class="menu-toggle color4">
         <img class='menu-icon' id="mobile-menu" src="assets/open-menu.svg">
-        <a href="#"><img height="50px" src="assets/logo.svg"></a>
+        <a href="index.html"><img height="50px" src="assets/logo.svg"></a>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="#" class="a-link">Thema</a></li>
+        <li><a href="index.html" class="a-link">Home</a></li>
         <li><a href="#" class="a-link">De Geveltuin</a></li>
         <li><a href="#" class="a-link">Stekjes & Zaadjes</a></li>
         <li><a href="Partners.html" class="a-link">Partners </a></li>
@@ -31,8 +31,8 @@
       <div class="background-div"></div>
       <div class="front-div">
         <h1 class="partners">Partners</h1><br>
-        <p>Bij Bieb & Bloei geloven we in de kracht van samenwerking om onze groene initiatieven tot leven te brengen.
-          Samen met onze gewaardeerde partners:</p>
+        <h5>Bij Bieb & Bloei geloven we in de kracht van samenwerking om onze groene initiatieven tot leven te brengen.
+          Samen met onze gewaardeerde partners</h5>
       </div>
     </div>
 
@@ -46,6 +46,7 @@
             <p>Bieb & Bloei is een initiatief van de Openbare Bibliotheek Amsterdam (OBA).
               In de projecten van Buurtcampus Oost benutten we de kennis en creativiteit van de studenten en de locaties
               en publieksprogramma’s van de bibliotheek.</p>
+            <a href="https://www.oba.nl/">Oba</a>
           </div>
           <div class="slide" id="slide2">
             <h1>Hva</h1>
@@ -53,15 +54,17 @@
             <p>Samenwerking HvA
               Bieb & Bloei is een initiatief van de Hogeschool van Amsterdam (HvA). In de projecten van Hva benutten we
               de kennis en creativiteit van de studenten en de locaties en publieksprogramma’s van de bibliotheek.</p>
+            <a href="https://www.hva.nl/">hva</a>
           </div>
           <div class="slide" id="slide3">
             <h1>Tugla85</h1>
             <h5>Samenwerking Tugla85</h5>
             <p>Bieb & Bloei werkt samen met Tugla85. In de projecten van Tugla85 benutten we de kennis en creativiteit.
-              Zij helpen ons met het organiseren an workshops voor studenten.</p>
+              Zij helpen ons met het organiseren van workshops voor studenten.</p>
+            <a href="https://www.tugela85.nl/">tugela85</a>
           </div>
         </div>
-        <div class="dots-container"><!--slideshow ADDED-->
+        <div class="dots-btn-container"><!--slideshow ADDED-->
           <span class="dot active" data-index="0"></span>
           <span class="dot" data-index="1"></span>
           <span class="dot" data-index="2"></span>
